Fixed problem with default style causing table to have size tags wrapped around them

--- a/jquery.sceditor.default.css
+++ b/jquery.sceditor.default.css
@@ -1,4 +1,4 @@
-html, body, p, code:before {
+html, body, p, code:before, table {
 	margin: 0;
 	padding: 0;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
